--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,18 @@
     <title>Ajax Sandbox</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
 </head>
+
 <body>
     <div class="container">
-        <button id="button">Get Data</button>
+        <button id="button1">Get Customer</button>
+        <button id="button2">Get Customers</button>
         <br>
-        <div id="output"></div>
+        <h1>Customer</h1>
+        <div id="customer"></div>
+        <h1>Customers</h1>
+        <div id="customers"></div>
     </div>
     <script src="app.js"></script>
 </body>
+
 </html>
