--- a/http_library/index.html
+++ b/http_library/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cusotom HTTP Library</title>
+    <title>Custom HTTP Library</title>
 </head>
 
 <body>
-    <h1>Cusotom HTTP Library</h1>
+    <h1>Custom HTTP Library</h1>
     <script src="easy_http.js"></script>
     <script src="app_http.js"></script>
 </body>
